# pyse2025-da-pra-fazer-contas-com-mapas-usando-Python

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
0-algebra/: index.html
1-dados_espaciais/: index.html
2-fontes_de_dados/: index.html
3-informacoes_numericas_e_espaciais/: index.html
4-combinar_informacoes_em_mapas/: index.html
5-analise_de_dados_ludica/: index.html
6-algebra_de_mapas_com_biblioteca_padrao/: index.html
7-algebra_de_mapas_com_bibliotecas_especializadas/: index.html
8-visualizacao_de_dados_com_qgis/: index.html
data/ibge/: precipitacao.tif  temperatura.tif
docs/: 0-algebra.md  1-dados_espaciais.md  2-fontes_de_dados.md  3-informacoes_numericas_e_espaciais.md  4-combinar_informacoes_em_mapas.md  5-analise_de_dados_ludica.md  6-algebra_de_mapas_com_biblioteca_padrao.md  7-algebra_de_mapas_com_bibliotecas_especializadas.md  8-visualizacao_de_dados_com_qgis.md  index.md
pyse2025_da_pra_fazer_contas_com_mapas_usando_python/: calculadora.py  mercado_central.py  pyse2025.qgz
search/: search_index.json
tests/: test_algebra_elementar.py
